Commented out config so reader can do the config

--- a/docker-compose/aps/activiti-identity-service.properties
+++ b/docker-compose/aps/activiti-identity-service.properties
@@ -18,20 +18,18 @@
 # IDENTITY SERVICE (i.e. Keycloak)
 # --------------------------------
 
-keycloak.enabled=true
-keycloak.realm=alfresco-dbp
-keycloak.auth-server-url=http://mbp512-mbergljung-0917.local:8080/auth
-keycloak.ssl-required=none
-keycloak.resource=alfresco-client
-keycloak.principal-attribute=email
+#keycloak.enabled=true
+#keycloak.realm=alfresco-dbp
+#keycloak.auth-server-url=http://mbp512-mbergljung-0917.local:8080/auth
+#keycloak.ssl-required=none
+#keycloak.resource=alfresco-client
+#keycloak.principal-attribute=email
 # set to true if access type is public for this client in keycloak
-keycloak.public-client=true
-# set secret key if access type is not public for this client in keycloak
-#keycloak.credentials.secret=
-keycloak.always-refresh-token=true
-keycloak.autodetect-bearer-only=true
-keycloak.token-store=cookie
-keycloak.enable-basic-auth=true
+#keycloak.public-client=true
+#keycloak.always-refresh-token=true
+#keycloak.autodetect-bearer-only=true
+#keycloak.token-store=cookie
+#keycloak.enable-basic-auth=true
 
 
 
