--- a/docker-compose/aps/activiti-ldap.properties
+++ b/docker-compose/aps/activiti-ldap.properties
@@ -1,3 +1,4 @@
+# Uncomment properties to enable LDAP Sync
 # LDAP Connection
 #ldap.authentication.java.naming.provider.url=ldap://ldap:10389
 #ldap.synchronization.java.naming.security.principal=uid=admin,ou=system
