--- a/docker-compose/acs/alfresco-global.properties
+++ b/docker-compose/acs/alfresco-global.properties
@@ -3,16 +3,17 @@ jodconverter.enabled=true
 # Identity Service (i.e. Keycloak)
 # --------------------------------
 
-authentication.chain=identity-service1:identity-service,alfrescoNtlm1:alfrescoNtlm
-identity-service.authentication.enabled=true
-identity-service.enable-basic-auth=true
-identity-service.authentication.defaultAdministratorUserNames=admin
-identity-service.authentication.validation.failure.silent=false
-identity-service.auth-server-url=http://mbp512-mbergljung-0917.local:8080/auth
-identity-service.realm=alfresco-dbp
-identity-service.resource=alfresco-client
-identity-service.public-client=true
-identity-service.ssl-required=none
+# UNCOMMENT TO ENABLE Identity Service (i.e. Keycloak) for ACS
+#authentication.chain=identity-service1:identity-service,alfrescoNtlm1:alfrescoNtlm
+#identity-service.authentication.enabled=true
+#identity-service.enable-basic-auth=true
+#identity-service.authentication.defaultAdministratorUserNames=admin
+#identity-service.authentication.validation.failure.silent=false
+#identity-service.auth-server-url=http://mbp512-mbergljung-0917.local:8080/auth
+#identity-service.realm=alfresco-dbp
+#identity-service.resource=alfresco-client
+#identity-service.public-client=true
+#identity-service.ssl-required=none
 
 #
 # Alfresco Email Service and Email Server
